--- a/css/main.css
+++ b/css/main.css
@@ -22,3 +22,199 @@ body {
     max-width: 100%;
     overflow-x: hidden;
 }
+
+.center {
+    width: 1200px;
+    margin: 0 auto;
+}
+
+ul li {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+.bg-color {
+    background-color: #f5f5f5;
+}
+
+.main {
+    height: 100vh;
+}
+/* HEADER */
+
+header {
+    background-color: #F6442E; 
+}
+
+/* HEADER TOP */
+
+.header-top {
+    max-width: 1200px;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+    height: 34px;
+    margin: auto;
+}
+
+.header-top_left a,
+.header-top_right a {
+    color: #fff;
+    padding: 10px;
+    font-size: 13px;
+    position: relative;
+}
+
+.header-top_left a:hover,
+.header-top_right a:hover {
+    color: rgb(224, 224, 224);
+}
+
+.separator::before {
+    content: "";
+    position: absolute;
+    border: solid 1px #F98E81;
+    height: 40%;
+    top: 28%;
+    right: -3px;
+}
+
+.dowload-app {
+    position: absolute;
+    background-color: yellow;
+    width: 210px;
+    right: -100%;
+    text-align: center;
+    border-radius: 4px;
+    display: none;
+}
+
+.dowload-app .dowload-app_gallery img,
+.dowload-app .dowload-app_mb img {
+    width: 80px;
+    height: auto;
+}
+
+.dowload-app .dowload-app_mb {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.dowload-app .dowload-app_gallery {
+    margin: 0 10px;
+    display: block;
+}
+
+.header-top_left a:hover .dowload-app {
+    display: block;
+}
+
+.notification {
+    width: 300px;
+    height: 200px;
+    background-color: yellow;
+    position: absolute;
+    right: 10px;
+    display: none;
+}
+
+.notification::before {
+    content: "";
+    position: absolute;
+    top: -8px;
+    right: 37px;
+    width: 20px;
+    height: 20px;
+    background-color: blue;
+    transform: rotate(45deg);
+}
+
+.notification .notification-img {
+    text-align: center;
+    display: block; 
+    line-height: 300px;
+}
+
+
+.notification .notification-img img {
+    width: 100px;
+    height: auto;
+    margin: auto;
+
+}
+
+.language {
+    width: 200px;
+    height: 80px;
+    background-color: yellow;
+    position: absolute;
+    right: 10px;
+    display: none;
+}
+
+.language .language-item a {
+    color: #000;
+}
+
+/* HEADER BOTTOM */
+
+.header-bottom {
+    height: 85px;
+    background-color: #F6442E;
+    width: 1200px;
+    display: flex;
+    margin: 0 auto;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-bottom .header-bottom_logo img {
+    width: 162px;
+    height: 50px;
+    color: #fff;
+}
+
+.header-bottom .header-bottom_search-input {
+    min-width: 840px;
+    position: relative;
+}
+
+.header-bottom .header-bottom_search-input::before {
+    content: "";
+    width: 60px;
+    height: 34px;
+    background-color: #F6442E;
+    position: absolute;
+    right: 4px;
+    top: 4px;
+    border-radius: 2px;
+}
+
+.header-bottom .header-bottom_search-input input {
+    border: none;
+    width: 100%;
+    padding: 13px;
+    border-radius: 2px;
+
+}
+
+.header-bottom .header-bottom_search-menu .menu .menu-item a {
+    color: #fff;
+    font-size: 12px;
+    margin-right: 10px;
+}
+
+.header-bottom_icon {
+    height: 50px;
+    width: 50px;
+    background-color: blue;
+}
+
+/* END HEADER */
+
+
