--- a/css/main.css
+++ b/css/main.css
@@ -402,7 +402,7 @@ header {
 .container-flashsale .flashsale-bottom .flashsale-bottom_product .flashsale-bottom_product--img .flashsale-bottom_img::before {
     content: "";
     position: absolute;
-    background-image: url(/assest/imgs/banner-sale-freeship.png);
+    background-image: url(assest/imgs/banner-sale-freeship.png);
     background-size: contain;
     background-repeat: no-repeat;
     z-index: 1;
@@ -446,7 +446,7 @@ header {
     position: absolute;
     left: 0;
     border-radius: 20px;
-    background-image: url(/assest/imgs/percent.png);
+    background-image: url(assest/imgs/percent.png);
     background-repeat: no-repeat;
 }
 
