--- a/css/main.css
+++ b/css/main.css
@@ -187,8 +187,8 @@ header {
 }
 
 .header-bottom .header-bottom_logo .logo {
-    width: 132px;
-    height: 44px;
+    width: 162px;
+    height: 50px;
     object-fit: cover;
     fill: #fff;
   }
@@ -224,9 +224,14 @@ header {
 }
 
 .header-bottom_icon {
-    height: 50px;
-    width: 50px;
-    background-color: blue;
+    margin-right: 50px;
+}
+
+.header-bottom_icon img {
+    height: 38px;
+    width: 38px;
+    filter: brightness(0) invert(1);
+   -webkit-filter: brightness(0) invert(1);
 }
 
 /* END HEADER */
@@ -402,7 +407,7 @@ header {
 .container-flashsale .flashsale-bottom .flashsale-bottom_product .flashsale-bottom_product--img .flashsale-bottom_img::before {
     content: "";
     position: absolute;
-    background-image: url(assest/imgs/banner-sale-freeship.png);
+    background-image: url(/assest/imgs/banner-sale-freeship.png);
     background-size: contain;
     background-repeat: no-repeat;
     z-index: 1;
@@ -446,7 +451,7 @@ header {
     position: absolute;
     left: 0;
     border-radius: 20px;
-    background-image: url(assest/imgs/percent.png);
+    background-image: url(/assest/imgs/percent.png);
     background-repeat: no-repeat;
 }
 
@@ -494,6 +499,18 @@ header {
     color: #000;
     font-size: 16px;
     font-weight: 500;
+    display: flex;
+    align-items: center;
+}
+
+.container-shopeemall .shopeemall-top .shopeemall-top_left .shopeemall-top_left--text .shopeemall-top_left--text-img {
+    margin-right: 10px;
+}
+
+.container-shopeemall .shopeemall-top .shopeemall-top_left .shopeemall-top_left--text .shopeemall-top_left--text-img img {
+    width: 17px;
+    height: 17px;
+    display: flex;
 }
 
 .container-shopeemall .shopeemall-top .shopeemall-top_right {
@@ -502,6 +519,26 @@ header {
 
 .container-shopeemall .shopeemall-top .shopeemall-top_right a {
     color: #d0011b;
+    position: relative;
+    z-index: 1;
+}
+
+.container-shopeemall .shopeemall-top .shopeemall-top_right a img {
+    width: 8px;
+    height: 10px;
+    margin-left: 10px;
+}
+
+.container-shopeemall .shopeemall-top .shopeemall-top_right a:before {
+    content: "";
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    background-color: #d0011b;
+    right: -4px;
+    bottom: -1px;
+    border-radius: 50px;
+    z-index: -1;
 }
 
 /* SHOPEE MALL BOTTOM */
@@ -558,7 +595,67 @@ header {
 /* TOP SEARCH */
 
 .container-topsearch {
-    padding: 20px 0;
+    margin-top: 20px;
+}
+
+.container-topsearch .topsearch-top {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 20px;
+    border-bottom: 1px solid rgba(0,0,0,.05);
+}
+
+.container-topsearch .topsearch-top .topsearch-top_left {
+    font-size: 16px;
+    color: #EE4D2D;
+}
+
+.container-topsearch .topsearch-top .topsearch-top_right a {
+    color: #EE4D2D;
+}
+
+.topsearch-bottom {
+    display: flex;
+}
+
+.topsearch-bottom .topsearch-bottom_item {
+    width: 200px;
+    height: 290px;
+}
+
+.topsearch-bottom .topsearch-bottom_item .topsearch-bottom_item--img {
+    padding: 20px 10px;
+    position: relative;
+}
+
+.topsearch-bottom .topsearch-bottom_item .topsearch-bottom_item--img img {
+    width: 180px;
+    height: 180px;
+}
+
+.topsearch-bottom .topsearch-bottom_item .topsearch-bottom_item--img .top-search-icon {
+    background-image: url(/assest/imgs/top-search.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 40px;
+    width: 30px;
+    position: absolute;
+    top: 20px;
+}
+
+.topsearch-bottom .topsearch-bottom_item .topsearch-bottom_item--img .monthlysales {
+    position: absolute;
+    width: 180px;
+    height: 25px;
+    background-color: rgba(0,0,0,.26);
+    color: #fff;
+    text-align: center;
+    bottom: 26px;
+}
+
+.topsearch-bottom .topsearch-bottom_item .topsearch-bottom_item--text {
+    margin-left: 10px;
+    font-size: 18px;
 }
 
 /* END TOP SEARCH */
