--- a/css/main.css
+++ b/css/main.css
@@ -407,7 +407,7 @@ header {
 .container-flashsale .flashsale-bottom .flashsale-bottom_product .flashsale-bottom_product--img .flashsale-bottom_img::before {
     content: "";
     position: absolute;
-    background-image: url(/assest/imgs/banner-sale-freeship.png);
+    background-image: url(../assest/imgs/banner-sale-freeship.png);
     background-size: contain;
     background-repeat: no-repeat;
     z-index: 1;
@@ -451,7 +451,7 @@ header {
     position: absolute;
     left: 0;
     border-radius: 20px;
-    background-image: url(/assest/imgs/percent.png);
+    background-image: url(../assest/imgs/percent.png);
     background-repeat: no-repeat;
 }
 
@@ -634,7 +634,7 @@ header {
 }
 
 .topsearch-bottom .topsearch-bottom_item .topsearch-bottom_item--img .top-search-icon {
-    background-image: url(/assest/imgs/top-search.png);
+    background-image: url(../assest/imgs/top-search.png);
     background-size: contain;
     background-repeat: no-repeat;
     height: 40px;
