--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,10 @@ body {
     background-color: white;
 }
 
+.pdt-120 {
+    padding-top: 120px;
+}
+
 .center {
     width: 1200px;
     margin: 0 auto;
@@ -42,6 +46,8 @@ a {
 
 .bg-color {
     background-color: #f5f5f5;
+    padding-bottom: 80px;
+    border-bottom: 4px solid #EE4D2D;
 }
 
 .main {
@@ -669,7 +675,6 @@ header {
 .container-showproduct {
     margin-top: 20px;
     padding-bottom: 70px;
-    border-bottom: 4px solid #EE4D2D;
 }
 
 .container-showproduct .showproduct-top {
