--- a/css/main.css
+++ b/css/main.css
@@ -97,13 +97,14 @@ header {
 
 .dowload-app {
     position: absolute;
-    background-color: yellow;
+    background-color: #FFF;
     width: 210px;
     right: -100%;
     text-align: center;
     border-radius: 4px;
     display: none;
     z-index: 1;
+    box-shadow: 0 0.0625rem 0.125rem 0 rgb(0 0 0 / 10%);
 }
 
 .dowload-app .dowload-app_gallery img,
@@ -126,6 +127,11 @@ header {
 
 .header-top_left a:hover .dowload-app {
     display: block;
+}
+
+.header-top_left a .header-top_left--icon .header-top_left--icon-img img {
+    width: 16px;
+    height: 16px;
 }
 
 .notification {
@@ -171,6 +177,7 @@ header {
     position: absolute;
     right: 10px;
     display: none;
+    z-index: 1;
 }
 
 .language .language-item a {
@@ -207,7 +214,11 @@ header {
     position: relative;
 }
 
-.header-bottom .header-bottom_search-input::before {
+.header-bottom .header-bottom_search-input .search-input-right:hover {
+    opacity: 0.8;
+}
+
+.header-bottom .header-bottom_search-input .search-input-right::before {
     content: "";
     width: 60px;
     height: 34px;
@@ -216,6 +227,21 @@ header {
     right: 4px;
     top: 4px;
     border-radius: 2px;
+    cursor: pointer;
+    
+}
+
+.header-bottom .header-bottom_search-input::after {
+    background-image: url(../assest/imgs/icons8-search-30.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    right: 22px;
+    top: 10px;
+    content: "";
+    width: 22px;
+    height: 22px;
+    cursor: pointer;
 }
 
 .header-bottom .header-bottom_search-input input {
@@ -324,7 +350,7 @@ header {
 .caterogy-bottom .caterogy-bottom_item {
     width: 120px;
     height: 150px;
-    border: 1px solid #f2f2f2;
+    border: 1px solid #f2f2f291;
 }
 
 .caterogy-bottom .caterogy-bottom_item:hover {
@@ -363,6 +389,25 @@ header {
     display: flex;
     padding: 15px 0 0 20px;
     height: 60px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.container-flashsale .flashsale-top .flashsale-top_left {
+    display: flex;
+}
+
+.container-flashsale .flashsale-top .flashsale-top_right {
+    padding-right: 20px;
+}
+
+.container-flashsale .flashsale-top .flashsale-top_right a {
+    color: #ee4d2d;
+}
+
+.container-flashsale .flashsale-top .flashsale-top_right a img {
+    width: 12px;
+    height: 10px;
 }
 
 .container-flashsale .flashsale-top .flashsale-top_img {
@@ -431,7 +476,7 @@ header {
 .container-flashsale .flashsale-bottom .flashsale-bottom_product .flashsale-bottom_product--img .flashsale-bottom_price .price-number {
     font-size: 16px;
     font-weight: 700;
-    color: #ee4d2d;
+    color: #ee4d2de8;
     margin-top: 13px;
 }
 
@@ -451,6 +496,7 @@ header {
 
 .container-flashsale .flashsale-bottom .flashsale-bottom_product .flashsale-bottom_product--img .flashsale-bottom_price .price-sold .z1 {
     z-index: 1;
+    font-size: 12px;
 }
 
 .price-sold_item {
@@ -612,6 +658,7 @@ header {
     justify-content: space-between;
     padding: 20px 20px;
     border-bottom: 1px solid rgba(0,0,0,.05);
+    align-items: center;
 }
 
 .container-topsearch .topsearch-top .topsearch-top_left {
@@ -621,6 +668,11 @@ header {
 
 .container-topsearch .topsearch-top .topsearch-top_right a {
     color: #EE4D2D;
+}
+
+.container-topsearch .topsearch-top .topsearch-top_right a img {
+    width: 12px;
+    height: 12px;
 }
 
 .topsearch-bottom {
@@ -871,6 +923,16 @@ header {
 
 .container-footer .footer-pay .footer-pay_item {
     width: 20%;
+    padding: 10px;
+}
+
+.container-footer .footer-pay .footer-pay_item ul li a .footer-pay_item--icon {
+    margin-right: 8px;
+}
+
+.container-footer .footer-pay .footer-pay_item ul li a .footer-pay_item--icon img {
+    width: 16px;
+    height: 16px;
 }
 
 .container-footer .footer-pay .footer-pay_item h3 {
@@ -887,6 +949,13 @@ header {
 .container-footer .footer-pay .footer-pay_item ul li a {
     font-size: 12px;
     color: rgba(0,0,0,.54);
+    display: flex;
+    text-align: center;
+    word-spacing: -0.5px;
+}
+
+.container-footer .footer-pay .footer-pay_item ul li .jc-ct {
+    justify-content: center;
 }
 
 .container-footer .footer-pay .footer-pay_item .footer-pay_item--img {
@@ -897,6 +966,8 @@ header {
 .container-footer .footer-pay .footer-pay_item .footer-pay_item--img li {
     width: 30%;
     padding: 4px;
+    box-shadow: 1px 1px 3px 0px rgb(0 0 0 / 30%);
+    margin: 6px 3px;
 }
 
 .container-footer .footer-pay .footer-pay_item .footer-pay_item--img li img {
