--- a/css/main.css
+++ b/css/main.css
@@ -75,6 +75,22 @@ header {
     margin: auto;
 }
 
+.header-top_right {
+    display: flex;
+}
+
+.header-top_right--item{
+    color: #fff;
+    padding: 10px;
+    font-size: 13px;
+    position: relative;
+    cursor: pointer;
+}
+
+.top_right--items:hover {
+    color: rgb(224, 224, 224);
+}
+
 .header-top_left a,
 .header-top_right a {
     color: #fff;
@@ -95,6 +111,15 @@ header {
     height: 40%;
     top: 28%;
     right: -3px;
+}
+
+.separator1::after {
+    content: "";
+    position: absolute;
+    border: solid 1px #F98E81;
+    height: 40%;
+    top: 28%;
+    right: 0;
 }
 
 .dowload-app {
@@ -1314,6 +1339,17 @@ header {
     background-color: rgba(0, 0, 0, 0.4);
 }
 
+@keyframes slipModalLogin {
+    from {
+        transform: translateY(-150px);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
 .open {
     display: flex;
 }
@@ -1484,6 +1520,7 @@ header {
     width: 768px;
     max-width: 100%;
     min-height: 500px;
+    animation: slipModalLogin ease 0.4s;
   }  
 
   .modal .body-modal .form-container {
@@ -1636,3 +1673,61 @@ header {
   }
 
 /* END MODAL */
+
+/* MODAL ADVERTISEMENT */
+
+.modal-advertisement {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: "Poppins", sans-serif;
+    overflow: hidden;
+    height: 100vh;
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 20;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-advertisement_container {
+    position: relative;
+}
+
+.advertisement-icon {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    background-color: #FFF;
+    right: -20px;
+    top: -20px;
+    display: flex;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.advertisement-icon i {
+    color: rgba(0, 0, 0, 0.5);;
+    margin: auto;
+    font-size: 28px;
+}
+
+.advertisement-img {
+    cursor: pointer;
+}
+
+.advertisement-img img {
+    height: auto;
+    width: 438px;
+}
+
+.close {
+    display: none;
+}
+
+
+/* END MODAL ADVERTISEMENT */
+
