--- a/page/text-DetailProduct/asset/css/DetailProducts.css
+++ b/page/text-DetailProduct/asset/css/DetailProducts.css
@@ -1411,3 +1411,270 @@ button.btn_solid {
 
 
 /* END DETAIL PRODUCT BOTTOM */
+
+/* FOOTER */
+
+/* FOOTER TOP */
+
+.container-footer {
+    margin-top: 60px;
+}
+
+.container-footer .footer-top {
+    border-bottom: 1px solid rgba(0,0,0,.09);
+    padding-bottom: 40px;
+}
+
+.container-footer .footer-top .footer-top_item {
+    margin-bottom: 15px;
+}
+
+.container-footer .footer-top .footer-top_item h3 {
+    font-weight: 700;
+    color: #000;
+    margin-bottom: 10px;
+}
+
+.container-footer .footer-top .footer-top_item p {
+    color: #000;
+    font-size: 13px;
+    margin-bottom: 7px;
+}
+
+.container-footer .footer-top .footer-top_item .footer-text .footer-text_item {
+    margin: 14px 0;
+    padding-left: 40px;
+    list-style: inside;
+    color: #000;
+    font-size: 12px;
+}
+
+/* FOOTER CATEROGY */
+
+.container-footer .footer-category .footer-category_top {
+    padding-top: 60px;
+    padding-bottom: 15px;
+    font-weight: 700;
+    padding-left: 5px;
+}
+
+.container-footer .footer-category .footer-category_bootom {
+    display: flex;
+}
+
+.container-footer .footer-category .footer-category_bootom .footer-category_column {
+    width: 20%;
+    padding: 5px;
+}
+
+.container-footer .footer-category .footer-category_bootom .footer-category_column .footer-category_item {
+    margin-bottom: 10px;
+}
+
+.container-footer .footer-category .footer-category_bootom .footer-category_column .footer-category_item a span {
+    color: #474747;
+}
+
+.container-footer .footer-category .footer-category_bootom .footer-category_column .footer-category_item a span:hover {
+    color: #EE4D2D;
+
+}
+
+.container-footer .footer-category .footer-category_bootom .footer-category_column .footer-category_item p {
+    margin-top: 5px;
+}
+
+.container-footer .footer-category .footer-category_bootom .footer-category_column .footer-category_item p a {
+    color: rgba(0,0,0,.54);
+}
+
+.container-footer .footer-category .footer-category_bootom .footer-category_column .footer-category_item p a:hover {
+    color: #EE4D2D;
+
+}
+
+/* FOOTER PAY */
+
+.container-footer .container-footer_pay {
+    background-color: #fbfbfb;
+}
+
+.container-footer .container-footer_pay .footer-pay {
+    padding: 40px 0;
+    border-bottom: 1px solid rgba(0,0,0,.09);
+    display: flex;
+}
+
+.container-footer .footer-pay .footer-pay_item {
+    width: 20%;
+    padding: 10px;
+}
+
+.container-footer .footer-pay .footer-pay_item ul li a .footer-pay_item--icon {
+    margin-right: 8px;
+}
+
+.container-footer .footer-pay .footer-pay_item ul li a .footer-pay_item--icon img {
+    width: 16px;
+    height: 16px;
+}
+
+.container-footer .footer-pay .footer-pay_item h3 {
+    margin-bottom: 16px;
+    font-weight: 700;
+    font-size: 12px;
+    color: #000;
+    margin-top: 15px;
+}
+
+.container-footer .footer-pay .footer-pay_item ul li {
+    margin-bottom: 10px;
+}
+
+.container-footer .footer-pay .footer-pay_item ul li a {
+    font-size: 12px;
+    color: rgba(0,0,0,.54);
+    display: flex;
+    text-align: center;
+    word-spacing: -0.5px;
+}
+
+.container-footer .footer-pay .footer-pay_item ul li .jc-ct {
+    justify-content: center;
+}
+
+.container-footer .footer-pay .footer-pay_item .footer-pay_item--img {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.container-footer .footer-pay .footer-pay_item .footer-pay_item--img li {
+    width: 30%;
+    padding: 4px;
+    box-shadow: 1px 1px 3px 0px rgb(0 0 0 / 30%);
+    margin: 6px 3px;
+}
+
+.container-footer .footer-pay .footer-pay_item .footer-pay_item--img li img {
+    width: 52px;
+    height: 22px;
+}
+
+.container-footer .footer-pay .footer-pay_item ul li a:hover {
+    color: #EE4D2D;
+}
+
+.container-footer .footer-pay .footer-pay_item .footer-pay_item--down {
+    display: flex;
+}
+
+.container-footer .footer-pay .footer-pay_item .footer-pay_item--down .footer-pay_item--down-left {
+    margin-right: 18px;
+    padding: 4px;
+    margin-bottom: 0.5rem;
+    background-color: #fff;
+    box-shadow: 0 1px 1px rgb(0 0 0 / 20%);
+    height: 88px;
+    width: 88px;
+}
+
+.container-footer .footer-pay .footer-pay_item .footer-pay_item--down .footer-pay_item--down-left a img {
+    width: 80px;
+    height: 80px;
+}
+
+.container-footer .footer-pay .footer-pay_item .footer-pay_item--down .footer-pay_item--down-right {
+    margin: auto 0;
+}
+
+.container-footer .footer-pay .footer-pay_item .footer-pay_item--down .footer-pay_item--down-right a {
+    display: block;
+    align-items: center;
+    padding: 4px;
+    margin-bottom: 0.5rem;
+    background-color: #fff;
+    box-shadow: 0 1px 1px rgb(0 0 0 / 20%);
+    height: 24px;
+    width: 76px;
+    border-radius: 2px;
+}
+
+.container-footer .footer-pay .footer-pay_item .footer-pay_item--down .footer-pay_item--down-right a img {
+    width: 68px;
+    height: 16px;
+}
+
+/* FOOTER COUNTRY */
+
+.container-footer .footer-country {
+    padding: 40px 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.container-footer .footer-country .footer-country_left {
+}
+
+.container-footer .footer-country .footer-country_right {
+    display: flex;
+}
+
+.container-footer .footer-country .footer-country_right a {
+    display: block;
+    margin: 0 5px;
+    color: rgba(0,0,0,.54);
+}
+
+.container-footer .footer-country .footer-country_right {
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+/* FOOTER BOTTOM */
+
+.container-footer .footer-bottom {
+    padding: 40px 0;
+    background-color: #f5f5f5;
+}
+
+.container-footer .footer-bottom .footer-bottom_policy {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 40px;
+}
+
+.container-footer .footer-bottom .footer-bottom_policy .policy-item {
+    padding: 0 25px;
+}
+
+.container-footer .footer-bottom .footer-bottom_policy .policy-item a {
+    color: rgba(0,0,0,.54);
+}
+
+.container-footer .footer-bottom .footer-bottom_certification {
+    text-align: center;
+}
+
+.container-footer .footer-bottom .footer-bottom_certification a {
+    padding: 0 25px;
+}
+
+.container-footer .footer-bottom .footer-bottom_certification a img {
+    width: 120px;
+    height: 45px;
+}
+
+.container-footer .footer-bottom .footer-bottom_certification .footer-bottom_certification--img2 {
+    width: 48px;
+    height: 48px;
+}
+
+.container-footer .footer-bottom .footer-bottom_company {
+    text-align: center;
+}
+
+.pd-tb-8_25px {
+    padding: 8px 0px 25px 0px;
+}
+
+/* END FOOTER */
