--- a/css/main.css
+++ b/css/main.css
@@ -208,7 +208,7 @@ header {
     background-color: #fff;
     position: absolute;
     right: 10px;
-    display: grid;
+    display: none;
     z-index: 2;
     border-radius: 4px;
     box-shadow: 0 1px 1px 0 rgb(0 0 0 / 10%);
@@ -1324,9 +1324,9 @@ header {
 .container-footer .footer-country .footer-country_left {
 }
 
-.container-footer .footer-country .footer-country_right {
+/* .container-footer .footer-country .footer-country_right {
     display: flex;
-}
+} */
 
 .container-footer .footer-country .footer-country_right a {
     display: block;
@@ -1335,8 +1335,14 @@ header {
 }
 
 .container-footer .footer-country .footer-country_right {
-    flex-wrap: wrap;
-    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+
+.container-footer .footer-country .footer-country_right span {
+    padding: 0 4px;
+    border-right: 1px solid #ccc;
+    height: 20px;
 }
 
 /* FOOTER BOTTOM */
@@ -1513,6 +1519,7 @@ header {
     letter-spacing: 1px;
     text-transform: capitalize;
     transition: 0.3s ease-in-out;
+    cursor: pointer;
   }
 
   .modal .body-modal .oraccount-span {
@@ -1563,11 +1570,13 @@ header {
   .modal .body-modal button:hover .register {
     right: 40px;
     opacity: 1;
+
   }
   
   .modal .body-modal button:hover .login{
     left: 40px;
     opacity: 1;
+
   }
 
  .modal .body-modal form {
@@ -1608,6 +1617,30 @@ header {
     height: 100%;
     transition: all 0.6s ease-in-out;
   }
+
+  .modal .body-modal .form-container .form-container_iconX {
+    display: flex;
+    position: absolute;
+    right: 0;
+    height: 45px;
+    width: 45px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    color: #9d9d9d;
+    background: #f5f5f5;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+  }
+
+  .modal .body-modal .form-container.right-panel-active .form-container_iconX {
+    opacity: 0;
+  }
+
+  .modal .body-modal .form-container .form-container_iconX:hover { 
+    background: #ccc;
+    color: #fff;
+  }
   
   .modal .body-modal .login-container {
     left: 0;
@@ -1631,6 +1664,7 @@ header {
     opacity: 1;
     z-index: 5;
     /* animation: show 0.6s; */
+    position: relative;
   }
 
   .animation-none {
@@ -1678,6 +1712,27 @@ header {
     width: 200%;
     transform: translateX(0);
     transition: transform 0.6s ease-in-out;
+  }
+
+  .modal .body-modal .overlay .form-container_iconX {
+    display: flex;
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 45px;
+    width: 45px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    color: #919191;
+    background: #ff9783;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;;
+  }
+
+  .modal .body-modal .overlay .form-container_iconX:hover {
+    background: #ee4d2d;
+    color: #ccc;
   }
 
   .modal .body-modal .overlay::before {
